--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This folder contains a list of personal data science projects completed between 20 - 21
+This folder contains a list of personal data science projects completed between 20 - 21. These projects were produced following the completion of the the IBM advanced data science course and are first attemptes at a given problem e.g. linear regression, classification etc.
