--- a/README
+++ b/README
@@ -1,2 +1,1 @@
-This folder contains a list of personal data science projects completed between 20 - 21. 
-These projects were produced following the completion of the the IBM advanced data science course and are first attemptes at a given problem e.g. linear regression, classification etc.
+In this folder, you will find a collection of personal data science projects completed between 2020-2021. These projects were done after finishing the IBM advanced data science course and were the initial attempts at solving a particular problem, such as linear regression, classification, and more.
